---
source: src/parser.rs
expression: result
---
- "\n             single_quote ::= '\\t\\r\\n\\'';\n             double_quote ::= \"\\t\\r\\n\\\"\";\n             regex_double_quote ::= #\"\\t\\r\\n\\\"\";\n        "
- - lhs: single_quote
    rhs:
      Terminal: "\t\r\n'"
  - lhs: double_quote
    rhs:
      Terminal: "\t\r\n\""
  - lhs: regex_double_quote
    rhs:
      RegexString: "\t\r\n\""
